# futures-shared-hang

./: Cargo.toml
src/: main.rs
