[package]
name = "recreate_tokio_fs_hang"
version = "0.1.0"
authors = ["Nick Stevens <nick.stevens@smartthings.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "=0.2.14", features = ["blocking", "fs", "macros", "rt-threaded", "time"] }
